--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -16,7 +16,7 @@
   }
 
   a:hover {
-    background-color: rgb(252, 252, 252) !important;
+    background-color: rgb(252, 252, 252);
   }
 }
 
@@ -59,4 +59,9 @@
 .logo {
   height: 40px;
   margin-right: 16px;
+}
+
+.navbar-links {
+  font-size: 24px !important;
+  padding: 0 20px;
 }
