--- a/app/assets/stylesheets/pages/_meetup.scss
+++ b/app/assets/stylesheets/pages/_meetup.scss
@@ -14,6 +14,14 @@
 
 }
 
+.big {
+  padding: 16px 32px !important;
+  font-size: 26px;
+  text-align: center;
+  max-width: 240px;
+  font-weight: bold;
+}
+
 // Banner
 
 .event-main-banner {
@@ -27,9 +35,15 @@
 	padding: 40px 0px 0px 120px;
 
 	h3 {
+    margin-top: 30px;
     padding-left: 60px;
 		max-width: 400px;
 	}
+
+  a {
+    margin-top: 30px;
+    margin-left: 60px;
+  }
 }
 
 .event-banner-content {
@@ -66,8 +80,8 @@
 }
 
 .evento-imagem {
-  align-self: center;
-  margin: 0px 0;
+  align-self: top;
+  margin: 0px 0px;
 }
 
 .evento-content {
@@ -77,7 +91,7 @@
   flex-direction: column;
   margin: 0 62px;
   font-family: Mukta;
-  font-size: 18px;
+  font-size: 22px;
   color: #5c5963;
 }
 
@@ -90,8 +104,8 @@
 }
 
 .ong-logo {
-  max-width: 100px;
-  max-height: 100px;
+  max-width: 250px;
+  max-height: 250px;
   justify-self: flex-end;
   margin: 40px;
 }
@@ -113,6 +127,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
+  margin: 24px 0;
   h4 {
     margin: 16px 0;
     color: white;
@@ -128,36 +143,49 @@
 // Convidados
 
 #convidados {
-  background-image: url('banner_hero.png');
+  background-image: url('teste_hero_fundo.png');
   background-size: cover;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: space-around;
+  background-position: center center;
   padding: 85px 40px;
+  text-align: center;
+  h2 {
+    margin-bottom: 60px;
+  }
 }
 
 .img-convidados {
-  width: 250px;
-  height: 250px;
-  background-image: url('convidado1.png');
+  margin: auto;
+  width: 200px;
+  height: 200px;
+  background-image: url('convidado 1.png');
+  background-size: cover;
+  background-position: center;
+  &:hover {
+    .img-content {
+      visibility: visible !important;
+    }
+  }
 }
 
 .img-content {
-  background-color: rgba(50, 50, 50, 0.3);
+  background-color: rgba(50, 50, 50, 0.6);
+  width: 100%;
+  height: 100%;
+  z-index: 130;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  visibility: hidden;
+
+  p {
+    color: white;
+    text-align: center;
+    margin: 10px auto;
+    font-size: 24px;
+  }
 }
 
-@media (max-width: 900px) {
-  #evento {
-    flex-direction: column;
-    min-width: 350px;
-  }
-
-  .evento-imagem {
-    align-self: center;
-    margin: 20px 0;
-  }
-}
 
 // Cronograma
 
@@ -280,4 +308,37 @@
   width: 250px;
   height: 150px;
   background-image: url('#');
+}
+
+
+//  MOBILE
+
+@media (max-width: 900px) {
+  .event-main-banner {
+    align-items: center;
+    justify-content: center;
+    padding: 50px;
+    h3 {
+      margin-top: 30px;
+      padding-left: 0px;
+      max-width: auto;
+      text-align: center;
+    }
+
+    a {
+      text-align: center;
+      margin-top: 30px;
+      margin-left: 0px;
+    }
+  }
+
+  #evento {
+    flex-direction: column;
+    min-width: 350px;
+  }
+
+  .evento-imagem {
+    align-self: center;
+    margin: 20px 0;
+  }
 }
