--- a/app/views/pages/meetup.html.erb
+++ b/app/views/pages/meetup.html.erb
@@ -67,29 +67,33 @@
 	<!-- Convidados especiais -->
 
 	<div id="convidados">
-		<h2>Convidados especiais</h2>
-		<row>
+		<h2 class="text-center">Convidados especiais</h2>
+		<div class="row">
 			<div class="col-12 col-sm-6 col-md-3">
 				<div class="img-convidados">
+						<%= image_tag 'convidado1.png' %>
 					<div class="img-content"></div>
 				</div>
 			</div>
 			<div class="col-12 col-sm-6 col-md-3">
 				<div class="img-convidados">
+						<%= image_tag 'convidado2.png' %>
 					<div class="img-content"></div>
 				</div>
 			</div>
 			<div class="col-12 col-sm-6 col-md-3">
 				<div class="img-convidados">
+						<%= image_tag 'convidado3.png' %>
 					<div class="img-content"></div>
 				</div>
 			</div>
 			<div class="col-12 col-sm-6 col-md-3">
 				<div class="img-convidados">
+						<%= image_tag 'convidado4.png' %>
 					<div class="img-content"></div>
 				</div>
 			</div>
-		</row>
+		</div>
 	</div>
 
 	<!-- Cronograma -->
