--- a/app/views/pages/meetup.html.erb
+++ b/app/views/pages/meetup.html.erb
@@ -4,7 +4,7 @@
 	<div class="event-main-banner">
 		<div class="event-banner-content">
 			<%= image_tag 'logo_evento_cinza.png' %>
-			<h3>Inteligencia de mercado e big data.</h3>
+			<h3>Todo dado importa, toda vida importa.</h3>
 			<%= link_to "Fazer inscrição", "https://www.sympla.com.br/empreendata--talk-class__461103", class: 'btn-evento big' %>
 		</div>
 	</div>
@@ -15,12 +15,14 @@
 		<%= image_tag 'o_evento.png', class: 'evento-imagem' %>
 		<div class="evento-content">
 			<h2>O evento</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur impedit ducimus, quia corporis quo enim
-				blanditiis, quis mollitia tenetur neque obcaecati culpa unde omnis ullam praesentium dolorum expedita aut numquam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium unde deleniti earum, repellendus aperiam sunt nobis. Aut quod odio, nisi culpa, consectetur eaque dolorum ducimus. Eos quasi sequi sed, odio.</p>
+			<p>Você quer otimizar seu faturamento, mas não sabe nem por onde começar? Ou quer iniciar sua própria empresa? 
+			Vou te contar que o segredo disso tudo está em um só lugar: DADOS! Queremos mostrar como coletá-los e usá-los ao seu favor. Afinal, segundo pesquisas do mercado, 85% das empresa fecham as portas em 2 anos e sabemos que você não quer fazer parte desses números! 
+			Nesse evento vamos te ajudar a entender um pouco mais sobre esse assunto em uma conversa com profissionais bem sucedidos do ramo empresarial! 
+			</p>
 			<div class="ong-text">
+				<%= image_tag 'teto.png', class: 'ong-logo'%>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, alias, laudantium! Facere perspiciatis atque
 					beatae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem quod similique saepe maiores deserunt. Officia adipisci praesentium dolores beatae corporis, culpa sit illum laboriosam neque dolorem, doloremque voluptatem, quis itaque. </p>
-				<%= image_tag 'teto.png', class: 'ong-logo'%>
 			</div>
 		</div>
 	</div>
@@ -34,31 +36,28 @@
 				<div class="features">
 					<%= image_tag 'empreendedores.png' %>
 					<h4>Empreendedores</h4>
-					<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque minus nam, odio. Quas laboriosoluptatem
-						assumenda. </p>
+					<p> Os dados proporcionam melhor controle sobre seus negócios. </p>
 				</div>
 			</div>
 			<div class="col-12 col-sm-6 col-md-3">
 				<div class="features">
 					<%= image_tag 'beginner.png' %>
 					<h4>Empreendedores beginner</h4>
-					<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea alias ipsum, porro. Reiciendis, facilis!</p>
+					<p> Para começar bem uma empresa, com uma análise mais profunda de dados!</p>
 				</div>
 			</div>
 			<div class="col-12 col-sm-6 col-md-3">
 				<div class="features">
 					<%= image_tag 'quer_empreender.png' %>
 					<h4>Quem quer empreender</h4>
-					<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus atque beatae quisquam distinctrerum
-						laboriosam. </p>
+					<p> Planejar uma idéia, com todos os detalhes precisos para dar o primeiro passo no empreendedorismo </p>
 				</div>
 			</div>
 			<div class="col-12 col-sm-6 col-md-3">
 				<div class="features">
 					<%= image_tag 'networking.png' %>
 					<h4>Quem busca networking</h4>
-					<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, sit. Odit fugiat sapiente atque naibus
-						ducimus temporibus. </p>
+					<p> Se pessoas também são dados, você precisa estar nessa conta! </p>
 				</div>
 			</div>
 		</div>
@@ -110,16 +109,16 @@
 		<h2 class="text-center">Cronograma</h2>
 		<div class="row">
 		<div class="col-12 col-sm-6 col-md-3">
-			<p>19h :: recepção & credenciamento</p>
+			<p>19h :: Recepção & credenciamento</p>
 		</div>
 		<div class="col-12 col-sm-6 col-md-3">
-			<p>19h30 :: talks</p>
+			<p>19h30 :: Talk</p>
 		</div>
 		<div class="col-12 col-sm-6 col-md-3">
-			<p>21h30 :: networking moment</p>
+			<p>20h30 :: Palestra</p>
 		</div>
 		<div class="col-12 col-sm-6 col-md-3">
-			<p>22h :: final do evento</p>
+			<p>21h30 :: Networking Moment</p>
 		</div>
 		</div>
 	</div>
@@ -128,11 +127,11 @@
 
 	<div id="inscricao">
 		<h2 class="text-center">Faça sua inscrição</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam recusandae, fugit ea reprehenderit officia
-			exercitationem. Ut suscipit, est quasi consequatur voluptatibus, tempore ipsa aut debitis molestiae iusto dolore
-			quisquam, ducimus.</p>
+		<p>Dados: Queremos mostrar como coletá-los e usá-los ao seu favor.
+		Nesse evento vamos te ajudar a entender um pouco mais sobre esse assunto em uma conversa com profissionais bem sucedidos do ramo empresarial! </p>
+		<p><strong>Esse evento representa o belíssimo trabalho da Construide, destinando nossas arrecadações de ingressos à instituição.</strong></p>
 		<div class="botao-inscricao">
-		<%= link_to "Fazer inscrição", root_path, class: 'event-banner-button' %>
+		<%= link_to "Fazer inscrição", "https://www.sympla.com.br/empreendata--talk-class__461103", class: 'event-banner-button' %>
 		</div>
 	</div>
 
@@ -143,16 +142,16 @@
 		<div class="row">
 			<div class="col-md-5 col-12">
 			
-				<p>Le Wagon São Paulo Coding Bootcamp<br>
+				<p>Le Wagon São Paulo - Prédio da EBAC<br>
 					R. Mourato Coelho, 1404 - 21<br>
 					Vila Madalena, São Paulo - SP</p><br>
 
 				<p>Contato para suporte<br>
-					suporte@suporte.com.br</p>
+					admin@empreend.com.br</p>
 				</div>
 		
 			<div class="col-md-7 col-12 local-imagem">
-				<%= image_tag 'mapa.png' %>
+				<%= image_tag 'mapa.png', id: "mapa" %>
 			</div>
 		</div>
 	</div>
