--- a/app/views/pages/meetup.html.erb
+++ b/app/views/pages/meetup.html.erb
@@ -21,8 +21,7 @@
 			</p>
 			<div class="ong-text">
 				<%= image_tag 'teto.png', class: 'ong-logo'%>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, alias, laudantium! Facere perspiciatis atque
-					beatae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem quod similique saepe maiores deserunt. Officia adipisci praesentium dolores beatae corporis, culpa sit illum laboriosam neque dolorem, doloremque voluptatem, quis itaque. </p>
+				<p>Além de te ajudar com conhecimento, nós consideramos que cada vida é um dado a ser contado e, por isso, 100% de nossas arrecadações em ingressos será destinada a Construide para que eles construam casas e ajudem pessoas a ser parte de uma estática positiva em moradia!. </p>
 			</div>
 		</div>
 	</div>
