--- a/app/views/pages/meetup.html.erb
+++ b/app/views/pages/meetup.html.erb
@@ -15,12 +15,18 @@
 		<%= image_tag 'o_evento.png', class: 'evento-imagem' %>
 		<div class="evento-content">
 			<h2>O evento</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur impedit ducimus, quia corporis quo enim
-				blanditiis, quis mollitia tenetur neque obcaecati culpa unde omnis ullam praesentium dolorum expedita aut numquam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium unde deleniti earum, repellendus aperiam sunt nobis. Aut quod odio, nisi culpa, consectetur eaque dolorum ducimus. Eos quasi sequi sed, odio.</p>
+			<p>Você quer otimizar seu faturamento, mas não sabe nem por onde começar? Ou quer iniciar sua própria empresa?
+				Vou te contar que o segredo disso tudo está em um só lugar: DADOS! Queremos mostrar como coletá-los e usá-los ao
+				seu favor. Afinal, segundo pesquisas do mercado, 85% das empresa fecham as portas em 2 anos e sabemos que você não
+				quer fazer parte desses números!
+				Nesse evento vamos te ajudar a entender um pouco mais sobre esse assunto em uma conversa com profissionais bem
+				sucedidos do ramo empresarial!
+			</p>
 			<div class="ong-text">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, alias, laudantium! Facere perspiciatis atque
-					beatae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem quod similique saepe maiores deserunt. Officia adipisci praesentium dolores beatae corporis, culpa sit illum laboriosam neque dolorem, doloremque voluptatem, quis itaque. </p>
 				<%= image_tag 'teto.png', class: 'ong-logo'%>
+				<p>Além de te ajudar com conhecimento, nós consideramos que cada vida é um dado a ser contado e, por isso, 100% de
+					nossas arrecadações em ingressos será destinada a Construide para que eles construam casas e ajudem pessoas a ser
+					parte de uma estática positiva em moradia!. </p>
 			</div>
 		</div>
 	</div>
@@ -67,14 +73,6 @@
 	<!-- Convidados especiais -->
 
 	<div id="convidados">
-<<<<<<< HEAD
-		<h2 class="text-center">Convidados especiais</h2>
-		<div class="row">
-			<div class="col-12 col-sm-6 col-md-3">
-				<div class="img-convidados">
-						<%= image_tag 'convidado1.png' %>
-					<div class="img-content"></div>
-=======
 		<h2>Convidados especiais</h2>
 		<div class="row">
 			<div class="col-12 col-sm-6 col-md-3">
@@ -83,46 +81,30 @@
 						<p>Elon Musk</p>
 						<p>CEO</p>
 					</div>
->>>>>>> 26264a0c33c003ab0ef1405e3a01548c6c89e9e3
 				</div>
 			</div>
 			<div class="col-12 col-sm-6 col-md-3">
 				<div class="img-convidados">
-<<<<<<< HEAD
-						<%= image_tag 'convidado2.png' %>
-					<div class="img-content"></div>
-=======
 					<div class="img-content">
 						<p>Elon Musk</p>
 						<p>CEO</p>
 					</div>
->>>>>>> 26264a0c33c003ab0ef1405e3a01548c6c89e9e3
 				</div>
 			</div>
 			<div class="col-12 col-sm-6 col-md-3">
 				<div class="img-convidados">
-<<<<<<< HEAD
-						<%= image_tag 'convidado3.png' %>
-					<div class="img-content"></div>
-=======
 					<div class="img-content">
 						<p>Elon Musk</p>
 						<p>CEO</p>
 					</div>
->>>>>>> 26264a0c33c003ab0ef1405e3a01548c6c89e9e3
 				</div>
 			</div>
 			<div class="col-12 col-sm-6 col-md-3">
 				<div class="img-convidados">
-<<<<<<< HEAD
-						<%= image_tag 'convidado4.png' %>
-					<div class="img-content"></div>
-=======
 					<div class="img-content">
 						<p>Elon Musk</p>
 						<p>CEO</p>
 					</div>
->>>>>>> 26264a0c33c003ab0ef1405e3a01548c6c89e9e3
 				</div>
 			</div>
 		</div>
@@ -133,18 +115,18 @@
 	<div id="cronograma">
 		<h2 class="text-center">Cronograma</h2>
 		<div class="row">
-		<div class="col-12 col-sm-6 col-md-3">
-			<p>19h :: recepção & credenciamento</p>
-		</div>
-		<div class="col-12 col-sm-6 col-md-3">
-			<p>19h30 :: talks</p>
-		</div>
-		<div class="col-12 col-sm-6 col-md-3">
-			<p>21h30 :: networking moment</p>
-		</div>
-		<div class="col-12 col-sm-6 col-md-3">
-			<p>22h :: final do evento</p>
-		</div>
+			<div class="col-12 col-sm-6 col-md-3">
+				<p>19h :: recepção & credenciamento</p>
+			</div>
+			<div class="col-12 col-sm-6 col-md-3">
+				<p>19h30 :: talks</p>
+			</div>
+			<div class="col-12 col-sm-6 col-md-3">
+				<p>21h30 :: networking moment</p>
+			</div>
+			<div class="col-12 col-sm-6 col-md-3">
+				<p>22h :: final do evento</p>
+			</div>
 		</div>
 	</div>
 
@@ -156,7 +138,7 @@
 			exercitationem. Ut suscipit, est quasi consequatur voluptatibus, tempore ipsa aut debitis molestiae iusto dolore
 			quisquam, ducimus.</p>
 		<div class="botao-inscricao">
-		<%= link_to "Fazer inscrição", root_path, class: 'event-banner-button' %>
+			<%= link_to "Fazer inscrição", root_path, class: 'event-banner-button' %>
 		</div>
 	</div>
 
@@ -166,15 +148,15 @@
 		<h2 class="text-center">Local do evento</h2>
 		<div class="row">
 			<div class="col-md-5 col-12">
-			
+
 				<p>Le Wagon São Paulo Coding Bootcamp<br>
 					R. Mourato Coelho, 1404 - 21<br>
 					Vila Madalena, São Paulo - SP</p><br>
 
 				<p>Contato para suporte<br>
 					suporte@suporte.com.br</p>
-				</div>
-		
+			</div>
+
 			<div class="col-md-7 col-12 local-imagem">
 				<%= image_tag 'mapa.png' %>
 			</div>
@@ -187,30 +169,27 @@
 <div id="parceiros">
 	<h2 class="text-center">Parceiros</h2>
 	<div class="row">
-		<div class="col-12 col-sm-6 col-md-2">
+		<div class="col-12 col-sm-6 col-md-3">
 			<div class="img-parceiros">
-				<div class="img-content"></div>
+				<%= image_tag 'strong_glass_logo.png' %>
 			</div>
 		</div>
-		<div class="col-12 col-sm-6 col-md-2">
+		<div class="col-12 col-sm-6 col-md-3">
 			<div class="img-parceiros">
-				<div class="img-content"></div>
+				<%= image_tag 'bend_glass_logo.png' %>
 			</div>
 		</div>
-		<div class="col-12 col-sm-6 col-md-2">
+		<div class="col-12 col-sm-6 col-md-3">
 			<div class="img-parceiros">
-				<div class="img-content"></div>
+				<%= image_tag 'smart-sell-logo.png' %>
 			</div>
 		</div>
-		<div class="col-12 col-sm-6 col-md-2">
+		<div class="col-12 col-sm-6 col-md-3">
 			<div class="img-parceiros">
-				<div class="img-content"></div>
+				<%= image_tag 'le-wagon-color.png' %>
 			</div>
 		</div>
-		<div class="col-12 col-sm-6 col-md-2">
-			<div class="img-parceiros"></div>
-			<div class="img-content"></div>
-		</div>
+
 	</div>
 </div>
 </div>
@@ -221,7 +200,7 @@
 
 
 <% content_for(:after_js) do %>
-  <%= javascript_tag do %>
-    <%= render(:partial => 'anchor', :handlers => [:erb], :formats => [:js]) %>
-  <% end %>
+<%= javascript_tag do %>
+<%= render(:partial => 'anchor', :handlers => [:erb], :formats => [:js]) %>
+<% end %>
 <% end %>
