--- a/app/views/pages/meetup.html.erb
+++ b/app/views/pages/meetup.html.erb
@@ -20,7 +20,7 @@
 			Nesse evento vamos te ajudar a entender um pouco mais sobre esse assunto em uma conversa com profissionais bem sucedidos do ramo empresarial! 
 			</p>
 			<div class="ong-text">
-				<%= image_tag 'teto.png', class: 'ong-logo'%>
+				<%= image_tag 'construide.png', class: 'ong-logo'%>
 				<p>Além de te ajudar com conhecimento, nós consideramos que cada vida é um dado a ser contado e, por isso, 100% de nossas arrecadações em ingressos será destinada a Construide para que eles construam casas e ajudem pessoas a ser parte de uma estática positiva em moradia!. </p>
 			</div>
 		</div>
@@ -68,34 +68,34 @@
 		<h2>Convidados especiais</h2>
 		<div class="row">
 			<div class="col-12 col-sm-6 col-md-3">
-				<div class="img-convidados">
+				<div class="img-convidados" id="michelle" >
 					<div class="img-content">
-						<p>Elon Musk</p>
-						<p>CEO</p>
+						<p>Michelle Chahin</p>
+						<p>Brand Ambassador at Grabr</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-12 col-sm-6 col-md-3">
-				<div class="img-convidados">
+				<div class="img-convidados" id="fabio">
 					<div class="img-content">
-						<p>Elon Musk</p>
-						<p>CEO</p>
+						<p>Fabio Camparini</p>
+						<p>Managing Director at Smart Sell Pro</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-12 col-sm-6 col-md-3">
-				<div class="img-convidados">
+				<div class="img-convidados" id="daniel">
 					<div class="img-content">
-						<p>Elon Musk</p>
-						<p>CEO</p>
+						<p>Daniel Silvestre</p>
+						<p>Head Business Intelligence at Vindi</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-12 col-sm-6 col-md-3">
-				<div class="img-convidados">
+				<div class="img-convidados" id="gabrielle">
 					<div class="img-content">
-						<p>Elon Musk</p>
-						<p>CEO</p>
+						<p>Gabrielle Jordano</p>
+						<p>CEO at Integratur</p>
 					</div>
 				</div>
 			</div>
@@ -106,18 +106,18 @@
 
 	<div id="cronograma">
 		<h2 class="text-center">Cronograma</h2>
-		<div class="row">
+		<div class="row text-center">
 		<div class="col-12 col-sm-6 col-md-3">
-			<p>19h :: Recepção & credenciamento</p>
+			<p>|| 19h :: Recepção & credenciamento</p>
 		</div>
 		<div class="col-12 col-sm-6 col-md-3">
-			<p>19h30 :: Talk</p>
+			<p>|| 19h30 :: Talk</p>
 		</div>
 		<div class="col-12 col-sm-6 col-md-3">
-			<p>20h30 :: Palestra</p>
+			<p>|| 20h30 :: Palestra</p>
 		</div>
 		<div class="col-12 col-sm-6 col-md-3">
-			<p>21h30 :: Networking Moment</p>
+			<p>|| 21h30 :: Networking Moment</p>
 		</div>
 		</div>
 	</div>
@@ -126,12 +126,11 @@
 
 	<div id="inscricao">
 		<h2 class="text-center">Faça sua inscrição</h2>
-		<p>Dados: Queremos mostrar como coletá-los e usá-los ao seu favor.
-		Nesse evento vamos te ajudar a entender um pouco mais sobre esse assunto em uma conversa com profissionais bem sucedidos do ramo empresarial! </p>
-		<p><strong>Esse evento representa o belíssimo trabalho da Construide, destinando nossas arrecadações de ingressos à instituição.</strong></p>
-		<div class="botao-inscricao">
-		<%= link_to "Fazer inscrição", "https://www.sympla.com.br/empreendata--talk-class__461103", class: 'event-banner-button' %>
-		</div>
+		<p>Dados: Queremos mostrar como coletá-los e usá-los ao seu favor.</p>
+		<p>Nesse evento vamos te ajudar a entender um pouco mais sobre esse assunto em uma conversa com profissionais bem sucedidos do ramo empresarial! </p>
+		<strong><p>Esse evento representa o belíssimo trabalho da Construide, destinando nossas arrecadações de ingressos à instituição.</p></strong>
+
+		<%= link_to "Fazer inscrição", "https://www.sympla.com.br/empreendata--talk-class__461103", class: 'btn-evento big' %>
 	</div>
 
 	<!-- Local -->
