--- a/app/views/pages/meetup.html.erb
+++ b/app/views/pages/meetup.html.erb
@@ -133,6 +133,8 @@
 		<%= link_to "Fazer inscrição", "https://www.sympla.com.br/empreendata--talk-class__461103", class: 'btn-evento big' %>
 	</div>
 
+
+</iframe>
 	<!-- Local -->
 
 	<div id="local">
@@ -148,9 +150,8 @@
 					admin@empreend.com.br</p>
 				</div>
 		
-			<div class="col-md-7 col-12 local-imagem">
-				<%= image_tag 'mapa.png', id: "mapa" %>
-			</div>
+		<iframe width="600" height="450" frameborder="0" style="border:0"
+		src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJj6ySU7xXzpQRhS2450flwDk&key=AIzaSyBx6J8qbhtC-aCNCwecoFdxf4Qw62ANCow" allowfullscreen></iframe>
 		</div>
 	</div>
 </div>
