--- a/app/views/pages/meetup.html.erb
+++ b/app/views/pages/meetup.html.erb
@@ -160,30 +160,18 @@
 
 <div id="parceiros">
 	<h2 class="text-center">Parceiros</h2>
-	<div class="row">
-		<div class="col-12 col-sm-6 col-md-2">
-			<div class="img-parceiros">
-				<div class="img-content"></div>
-			</div>
+	<div class="row text-center">
+		<div class="col-12 col-sm-6 col-md-3">
+			<%= image_tag 'strong_glass_logo.png', class: 'img-parceiros' %>
+		</div>
+		<div class="col-12 col-sm-6 col-md-3">
+			<%= image_tag 'bend_glass_logo.png', class: 'img-parceiros' %>
+		</div>
+		<div class="col-12 col-sm-6 col-md-3">
+			<%= image_tag 'smart_sell_logo.png', class: 'img-parceiros' %>
 		</div>
 		<div class="col-12 col-sm-6 col-md-2">
-			<div class="img-parceiros">
-				<div class="img-content"></div>
-			</div>
-		</div>
-		<div class="col-12 col-sm-6 col-md-2">
-			<div class="img-parceiros">
-				<div class="img-content"></div>
-			</div>
-		</div>
-		<div class="col-12 col-sm-6 col-md-2">
-			<div class="img-parceiros">
-				<div class="img-content"></div>
-			</div>
-		</div>
-		<div class="col-12 col-sm-6 col-md-2">
-			<div class="img-parceiros"></div>
-			<div class="img-content"></div>
+			<%= image_tag 'le_wagon_logo.png', class: 'img-parceiros wagon' %>
 		</div>
 	</div>
 </div>
